--- a/static/style.css
+++ b/static/style.css
@@ -25,10 +25,7 @@
         margin-right: auto;
         margin-left: auto;
     }
-    .cell{
-        margin: 0.2em;
-        max-width: 9.4em;
-    }
+
     header{
         height: 4em;
     }
@@ -41,6 +38,7 @@
 
     .inner_container{
         width:100%;
+
     }
 
 
@@ -63,11 +61,9 @@
     }
 
 
+
     .experiences .experience{
         padding-bottom: 2.438em;
-    }
-    .experiences .appImage img{
-        width: 26em;
     }
 
 
@@ -83,15 +79,6 @@
         width: 5em;
         height: 5em;
         border-radius: 50%;
-    }
-
-    .photos .list_photos img{
-        width: 14em;
-        height: 14em;
-        margin-left: 0.5em;
-        margin-right: 0.5em;
-        margin-bottom: 1em;
-        object-fit: cover;
     }
 
 
@@ -117,10 +104,7 @@
     header .logo img{
         width:9em;
     }
-    .cell{
-        margin: 0.5em;
-        max-width: 10em;
-    }
+
    .inner_container{
         width:50%;
     }
@@ -134,28 +118,7 @@
         position: relative;
         margin: 2em;
     }
-    .profile .slide_dots{
-        z-index: 10;
-        width:100%;
-        position: absolute;
-        text-align: center;
-        bottom: 1em;
 
-
-    }
-    .profile .slide_dot{
-        text-align:center;
-        height: 0.5em;
-        width: 0.5em;
-        margin: 0 0.2em;
-        background-color: #bbb;
-        border-radius: 50%;
-        display: inline-block;
-    }
-
-    .profile .active{
-        background-color:rgba(255,255,255,1);
-    }
 
     .profile img#flag{
         width:8.2em;
@@ -164,10 +127,6 @@
     }
     .experiences .experience{
         padding-bottom: 2.688em;
-    }
-
-    .experiences .appImage img{
-        width: 34em;
     }
 
     /**************************************************************/
@@ -182,17 +141,10 @@
         height: 6em;
         border-radius: 50%;
     }
-
-    .photos .list_photos img{
-        width: 18em;
-        height: 18em;
-        object-fit: cover;
-        margin-left: 0.75em;
-        margin-right: 0.75em;
-        margin-bottom:1.5em;
-
+    .recommended_members .cell{
 
     }
+
 
 }
 
@@ -254,6 +206,7 @@ hr{
     text-align: center;
 }
 .inner_container{
+    text-align:center;
     margin-left: auto;
     margin-right: auto;
 }
@@ -263,28 +216,35 @@ a{
     display: inline;
 
 }
-.cells{
-    margin-right: auto;
+.row{
     margin-left: auto;
-    text-align:center;
+    margin-right: auto;
+}
+.cells{
 
+    text-align: left;
 }
 
 .cell{
-    height: 4em;
+    height: 5em;
+    position: relative;
+    padding: 0.5%;
+    margin:0;
+    text-align:center;
+
+}
+.cell > div{
+    width:100%;
+    height: 100%;
     border: solid 1px #ff5730;
     border-radius: 0.8em;
     position: relative;
-    display: flex;
-    display:-webkit-flex;
-    text-align: center;
-    -webkit-align-items:center;
+    padding: 0;
+    margin:0.4%;
+    display:inline-flex;
     align-items: center;
     justify-content: center;
-    margin-bottom: 1em;
-    padding: 0;
 }
-
 
 
 /*header*/
@@ -305,7 +265,9 @@ header .logo{
 
 /*profile.html*/
 /*main*/
-
+.profile .image_slide>div:nth-child(2){
+    position: relative;
+}
 .profile .image_slide{
     display: inline-flex;
     display: -webkit-inline-flex;
@@ -314,34 +276,70 @@ header .logo{
     margin-bottom:2em;
 }
 
+
+.profile .slide_dots{
+    z-index: 100;
+    width:100%;
+    position: absolute;
+    text-align: center;
+    bottom: 1em;
+
+}
+.profile .slide_dot{
+    text-align:center;
+    height: 0.5em;
+    width: 0.5em;
+    margin: 0 0.2em;
+    background-color: #bbb;
+    border-radius: 50%;
+    display: inline-block;
+}
+
+.profile .active{
+    background-color:rgba(255,255,255,1);
+}
+
 .profile .quote{
     width: 100%;
     margin-top: 2.4em;
     margin-bottom: 5em;
-    display: inline-flex;
-    display: -webkit-inline-flex;
 }
-
+.profile .quote div{
+    display: inline-block;
+}
 
 .profile .quote img{
     width: 1.9em;
     margin-left: 1em;
     margin-right: 1em;
 }
-.profile .flags > div{
-    margin-bottom: 4.2em;
-    padding: 0;
+.profile .flags{
+    text-align: center;
 }
-.profile .flag > div{
-    display: inline-block;
+
+.profile .flag >div{
+    position: relative;
+}
+
+.profile .flag > div>div:nth-child(2) img{
+    position: absolute;
+    right:0;
+    bottom:0;
 }
 .profile .flag{
+    display: inline-block;
     position: relative;
-    width: 10em;
+    width:31.3%;
+    padding:0;
+    margin:1%;
+    text-align:center;
+}
+.profile .flag >div{
     margin-left: auto;
     margin-right: auto;
-
+    width:8.5em;
 }
+
 .profile img#flag{
     margin-bottom: 0.8em;
     width:8em;
@@ -351,16 +349,34 @@ header .logo{
 .profile img#recorded{
     z-index:100;
     position: absolute;
+
     right:0;
 }
 
 
-.identity .inner_container{
-    text-align: center;
-}
 
 .identity .inner_container div{
     padding: 0;
+}
+
+.identity .inner_container span{
+    margin-right: auto;
+    margin-left: auto;
+}
+.identity .cells{
+    text-align: center;
+
+}
+.identity .cell{
+    display: inline-block;
+    width:31.3%;
+     height: 5em;
+    position: relative;
+    padding: 0.5%;
+    margin:1%;
+    text-align:center;
+
+
 }
 
 
@@ -405,45 +421,112 @@ header .logo{
     margin-left: 2.2em;
 }
 
+.skills .inner_container >div>p{
+    text-align: left;
+    padding-left:15%;
+}
+
+.skills .skillbar{
+    position: relative;
+    height:1em;
+    width:70%;
+    background-color: rgba(0,0,0,0.1);
+    border-radius: 0.4em;
+    margin-left: auto;
+    margin-right: auto;
+    margin-top: 2%;
+    margin-bottom: 4%;
+}
+.skills .innerbar{
+    left:0;
+    position: absolute;
+    height: 100%;
+    width:0%;
+    background-color: #ff5730;
+    border-radius: 0.4em;
+}
+.skills .barvalue{
+    display: none;
+}
 
 /*experience*/
 
 .experiences .experience {
     text-align: left;
-    display: inline-flex;
-    display: -webkit-inline-flex;
-    -webkit-align-items:top;
-    align-items: top;
-    width: 100%;
     position: relative;
-
-}
-.left_border{
-     position: absolute;
-     border-left:1px solid #ff5730;
-     margin-left: 0.55em;
-     height: 100%;
-     z-index: -10;
-     margin-top: 1em;
-}
-
-.experiences .experience:last-child .left_border{
-    display:none;
 }
 
 
-.experiences .experience > div{
+.experiences .experience .vertical-line{
+    position: absolute;
+    width:100%;
+    height: 100%;
+    border-left: 1.5px solid #ff5730 ;
+    margin-top:1%;
+    margin-left: 8.2%;
+    z-index: -100;
 
 }
+.experiences .experience:last-child .vertical-line {
+
+    border:none;
+}
+.experiences .experience .row>div{
+}
+.experiences .experience .row >div:first-child{
+    display: inline-block;
+    height: 100%;
+}
+
+
 .experiences .experience .dot{
-    margin-right: 2.5em;
+    z-index: 100;
+    text-align: center;
+
 
 }
 .experiences .experience .dot img{
     width:1.2em;
 }
+
+.experiences .experience .details{
+}
+
+
 .experiences .specification > div{
     margin-bottom: 1.5em;
+}
+.experiences .multi-images{
+    width:100%;
+    position: relative;
+}
+.experiences .multi-images .col-xs-4{
+    padding: 0;
+    padding:1%;
+    position: relative;
+
+}
+.experiences .multi-images .col-xs-4 >div{
+    display: block;
+    object-fit: cover;
+ position: relative;
+    height:0;
+      padding: 100% 0 0 0;
+    width:100%;
+}
+
+.experiences .multi-images img{
+  display: block;
+position: absolute;
+  width:100%;
+    height:100%;
+  left: 0;
+  right: 0;
+  top: 0;
+  bottom: 0;
+    object-fit: cover;
+
+  margin: auto;
 }
 
 .experiences .app div{
@@ -451,9 +534,40 @@ header .logo{
     vertical-align: middle;
     margin-right: 1em;
 }
-.experiences .appImage img{
+.experiences .app img{
+    width:4.3em;
     margin-bottom: 1em;
 }
+.experiences .web{
+    position: relative;
+    width:100%;
+}
+.experiences .web a{
+position: relative;
+width:100%;
+}
+.experiences .web a > div{
+    display: block;
+    width:100%;
+
+  position: relative;
+  height: 0;
+  padding: 56.25% 0 0 0;
+  object-fit: cover;
+}
+.experiences .web img{
+    position: absolute;
+  display: block;
+    width:100%;
+    height:100%;
+  left: 0;
+  right: 0;
+  top: 0;
+  bottom: 0;
+  margin: auto;
+  object-fit: cover;
+}
+
 .experiences hr{
     margin-top: 1em;
     margin-bottom: 1em;
@@ -550,6 +664,8 @@ header .logo{
     text-align: left;
 }
 
+
+
 .content p{
     margin-bottom: 1em;
 }
@@ -562,11 +678,20 @@ header .logo{
     margin-right: auto;
 }
 
-.members_to_work_with .members .member{
-    display: inline-block;
-    margin-bottom: 4em;
-
+.members_to_work_with .members{
+    text-align: left
 }
+
+.members_to_work_with .members > div{
+    display: inline-block;
+    text-align: center;
+    margin-bottom: 4em;
+    padding:0;
+    padding-right: 1%;
+    padding-bottom: 1%;
+    max-width: 32%;
+}
+
 .members_to_work_with .members .member:last-child{
         margin-right: 0;
     }
@@ -579,22 +704,36 @@ header .logo{
     border:1px solid rgba(0,0,0,0.1);
 }
 
-.photos .list_photos >div{
+.photos .list_photos .row >div{
+   text-align: center;
 
-    margin-right: auto;
-    margin-left: auto;
-/*    display: flex;
-    display: -webkit-flex;*/
-    /*justify-content: space-between;*/
-    text-align: center;
-
+}
+.photos .list_photos .row .col-xs-6 {
+    padding:0;
+    padding-right: 1%;
+    padding-bottom: 1%;
 }
 
 .photos .list_photo{
-    display: inline-block;
-    padding: 0;
+    display: block;
+  position: relative;
+  height: 0;
+  padding: 100% 0 0 0;
+  object-fit: cover;
 }
+.photos .list_photo img{
 
+    position: absolute;
+  display: block;
+    width:100%;
+    height:100%;
+  left: 0;
+  right: 0;
+  top: 0;
+  bottom: 0;
+  margin: auto;
+  object-fit: cover;
+}
 .photos .modal{
     background-color: rgba(0,0,0,0.7);
 
@@ -627,6 +766,7 @@ header .logo{
     transform: translate(-50%,-50%);
 
 }
+
 
 
 
