--- a/webpage/templates/board.html
+++ b/webpage/templates/board.html
@@ -33,6 +33,12 @@
     <meta property="og:title" content="{{ title }}">
     <meta property="og:type" content="article">
     <meta property="fb:app_id" content="301905626853621">
+
+
+    <!--google font-->
+    <link href="https://fonts.googleapis.com/css?family=Noto+Sans" rel="stylesheet">
+
+
     <title>{{ title }}</title>
 </head>
 
