--- a/webpage/templates/profile.html
+++ b/webpage/templates/profile.html
@@ -34,6 +34,10 @@
     <meta property="og:type" content="website">
     <meta property="fb:app_id" content="301905626853621">
 
+
+    <!--google font-->
+    <link href="https://fonts.googleapis.com/css?family=Noto+Sans" rel="stylesheet">
+
     <title>{{ profile.first_name }} on Loungy</title>
 </head>
 <body>
